tests/integration/errors/test_operator_cross_type.sn
# Error test: operator == with mismatched right-hand type

struct Point =>
  x: int
  y: int

  operator == (other: Point): bool =>
    return false

struct Color =>
  r: int
  g: int
  b: int

fn main(): void =>
  var p: Point = {
    x: 1,
    y: 2
  }
  var c: Color = {
    r: 1,
    g: 2,
    b: 3
  }
  var eq: bool = p == c
  print($"{eq}\n")
